
syntax = "proto3";

option java_multiple_files = true;
option java_package = "sr.grpc.gen";
option java_outer_classname = "CalculatorProto";

package calculator;

message ArithmeticOpArguments {
  int32 arg1 = 1;
  int32 arg2 = 2;
}

message MultiplyOpArguments {
  repeated int32 args = 1;
}

message ArithmeticOpResult {
  int32 res = 1;
}

service Calculator {
  rpc Add (ArithmeticOpArguments) returns (ArithmeticOpResult) {}
  rpc Subtract (ArithmeticOpArguments) returns (ArithmeticOpResult) {}
  rpc Multiply (MultiplyOpArguments) returns (ArithmeticOpResult) {}
}

enum OperationType {
	SUM = 0;
    AVG = 1;
    MIN = 2;
    MAX = 3;
    MULTIPLY = 4;
}

message ComplexArithmeticOpArguments {
  OperationType optype = 1;  
  repeated double args = 2;
}

message ComplexArithmeticOpResult {
  double res = 1;
}

message ErrorMultiply {
  string message = 1;
  int32 code = 2;
}
     
service AdvancedCalculator {
  rpc ComplexOperation (ComplexArithmeticOpArguments) returns (ComplexArithmeticOpResult) {}
}

